--- a/src/main/resources/assets/randomores/lang/en_US.lang
+++ b/src/main/resources/assets/randomores/lang/en_US.lang
@@ -1,2 +1,2 @@
-tile.random_ore.name=Random Ore
-tile.dangerous_random_ore.name=Dangerous Random Ore
+tile.random_ore_0.name=Random Ore
+tile.random_ore_1.name=Dangerous Random Ore
